--- a/header.html
+++ b/header.html
@@ -11,18 +11,18 @@
         <p class="menu-line line-3"></p>
       </a>
     </div>
-    <button id="moDetailOpen" class="search-slide-btn"></button>
+    <p id="moDetailOpen" class="search-slide-btn"></p>
 
     <div class=" search-area clearFix">
       <div class="search-keyword-wrap">
         <div class="search-input">
           <input type="text" id="searchWord" placeholder="검색어를 입력하세요">
           <label for="searchWord" class="blind">검색어를 입력하세요</label>
-          <button class="search-btn"></button>
+          <p class="search-btn"></p>
         </div>
-        <p class="search-detail-btn">
-          <button id="detailOpen" class="">상세검색</button>
-        </p>
+        <div class="search-detail-btn">
+          <p id="detailOpen" class="">상세검색</p>
+        </div>
       </div>
 
       <div class="search-date-wrap">
@@ -56,7 +56,7 @@
   <!-- 상세검색 슬라이더 start -->
   <div class="detail-slider">
     <div class="slider-inner">
-      <button class="cls-btn">X</button>
+      <p class="cls-btn">X</p>
       <form action="">
         <div class="detail-area-wrap">
           <div class="detail-area detail-channel-area">
@@ -222,7 +222,7 @@
                 </div>
                 <div class="detail-input">
                   <input type="text" placeholder="포함어를 입력하세요 (최대3개)">
-                  <button class="add-btn">+</button>
+                  <p class="add-btn">+</p>
                 </div>
               </div>
 
@@ -237,7 +237,7 @@
                 </div>
                 <div class="detail-input">
                   <input type="text" placeholder="포함어를 입력하세요 (최대3개)">
-                  <button class="add-btn">+</button>
+                  <p class="add-btn">+</p>
                 </div>
               </div>
             </fieldset>
@@ -251,8 +251,8 @@
             </p>
           </div>
           <div class="detail-btn-wrap">
-            <button id="detailCncl" class="cancel-btn">취소</button>
-            <button type="submit" id="detailSubmit" class="submit-btn">검색 결과 보기</button>
+            <p id="detailCncl" class="cancel-btn">취소</p>
+            <p type="submit" id="detailSubmit" class="submit-btn">검색 결과 보기</p>
           </div>
         </div>
       </form>
