--- a/hottest.html
+++ b/hottest.html
@@ -36,13 +36,15 @@
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판, 연관 단어</em>를 <br> 한눈에 알아볼 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-trend">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판</em>이 시간의 흐름에 따라 <br><em class="txt-highlight">변화되는
+                      과정</em>s을 확인할 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-hottest now-on">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
+                      게시글</em>을 확인할 수 있습니다.
                   </li>
                 </ul>
               </div>
@@ -69,7 +71,7 @@
           <article class="content-article article-hottest-cafes width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">CAFE TOP 5</h3>
+                <h3 class="add-icon">CAFE TOP 10</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap">
@@ -77,9 +79,9 @@
                     <li class="hottest-item item-title">
                       <span class="icon-area icon-none"></span>
                       <div class="contents-area">
-                        <p class="item-name">카페명</p>
-                        <span class="item-post-num">게시글 수</span>
-                        <span class="item-engagement">건수</span>
+                        <p class="item-name">CAFE ID</p>
+                        <span class="item-post-num">POSTS</span>
+                        <span class="item-engagement">ENGAGEMENT</span>
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
@@ -122,8 +124,48 @@
                         <span class="item-engagement">9,471</span>
                       </div>
                     </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
                   </ul>
-                  <button class="list-more-btn">더 보기</button>
+                  <!-- <p class="list-more-btn">더 보기</p> -->
                 </div>
               </div>
             </div>
@@ -132,7 +174,7 @@
           <article class="content-article article-hottest-blogers width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">BLOGER TOP 5</h3>
+                <h3 class="add-icon">BLOGER TOP 10</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap">
@@ -185,8 +227,48 @@
                         <span class="item-engagement">9,471</span>
                       </div>
                     </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black*****</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black*****</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black*****</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black*****</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black*****</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
                   </ul>
-                  <button class="list-more-btn">더 보기</button>
+                  <!-- <p class="list-more-btn">더 보기</p> -->
                 </div>
               </div>
             </div>
@@ -195,7 +277,7 @@
           <article class="content-article article-hottest-influencers width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="add-icon">SNS TOP 5</h3>
+                <h3 class="add-icon">SNS TOP 10</h3>
               </div>
               <div class="article-content">
                 <div class="article-hottest-wrap">
@@ -248,8 +330,48 @@
                         <span class="item-engagement">9,471</span>
                       </div>
                     </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
                   </ul>
-                  <button class="list-more-btn">더 보기</button>
+                  <!-- <p class="list-more-btn">더 보기</p> -->
                 </div>
               </div>
             </div>
@@ -402,7 +524,7 @@
                       </div>
                     </li>
                   </ul>
-                  <button class="list-more-btn">더 보기</button>
+                  <!-- <p class="list-more-btn">더 보기</p> -->
                 </div>
               </div>
             </div>
