--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <article class="content-article article-keyword-now intro-keyword-now width-3-1 po-r">
             <div class="article-inner">
               <div class="article-title">
-                <h3><b class="txt-gr">뜨고 있는</b> 키워드</h3>
+                <h3><b class="txt-gr">뜨고 있는 뉴스</b> 키워드</h3>
                 <span class="title-date">22.02.22일 기준</span>
               </div>
               <div class="article-content">
