--- a/now.html
+++ b/now.html
@@ -36,13 +36,15 @@
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now now-on">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판, 연관 단어</em>를 <br> 한눈에 알아볼 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-trend">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판</em>이 시간의 흐름에 따라 <br><em class="txt-highlight">변화되는
+                      과정</em>s을 확인할 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-hottest">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
+                      게시글</em>을 확인할 수 있습니다.
                   </li>
                 </ul>
               </div>
@@ -810,56 +812,64 @@
                 <div class="article-rank-wrap">
                   <ul class="rank-list">
                     <li class="rank-item item-title">
-                      <p class="item-standing">성향</p>
+                      <p class="item-standing sort-select-box">
+                        <select name="sortModalList" id="sortSntmRank" class="sort-select">
+                          <option value="latest" selected>성향</option>
+                          <option value="views">긍정</option>
+                          <option value="comments">중립</option>
+                          <option value="likes">부정</option>
+                        </select>
+                        <span class="icon-arrow"></span>
+                      </p>
                       <span class="item-keyword">단어</span>
                       <span class="item-num">건수</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-posit">
                       <p class="item-standing txt-posit">긍정</p>
                       <span class="item-keyword">따듯하다</span>
                       <span class="item-num">15,471</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-negat">
                       <p class="item-standing txt-negat">부정</p>
                       <span class="item-keyword">지루하다</span>
                       <span class="item-num">15,221</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-posit">
                       <p class="item-standing txt-posit">긍정</p>
                       <span class="item-keyword">소중하다</span>
                       <span class="item-num">12,117</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-negat">
                       <p class="item-standing txt-negat">부정</p>
                       <span class="item-keyword">멍청하다</span>
                       <span class="item-num">10,227</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-posit">
                       <p class="item-standing txt-posit">긍정</p>
                       <span class="item-keyword">착하다</span>
                       <span class="item-num">9,471</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-negat">
                       <p class="item-standing txt-negat">부정</p>
                       <span class="item-keyword">무섭다</span>
                       <span class="item-num">8,626</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-posit">
                       <p class="item-standing txt-posit">긍정</p>
                       <span class="item-keyword">재미있다</span>
                       <span class="item-num">7,684</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-negat">
                       <p class="item-standing txt-negat">부정</p>
                       <span class="item-keyword">지치다</span>
                       <span class="item-num">6,228</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-negat">
                       <p class="item-standing txt-negat">부정</p>
                       <span class="item-keyword">소외되다</span>
                       <span class="item-num">15,221</span>
                     </li>
-                    <li class="rank-item item-subs">
+                    <li class="rank-item item-subs item-posit">
                       <p class="item-standing txt-posit">긍정</p>
                       <span class="item-keyword">행복하다</span>
                       <span class="item-num">4,115</span>
