--- a/trend.html
+++ b/trend.html
@@ -39,13 +39,15 @@
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판, 연관 단어</em>를 <br> 한눈에 알아볼 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-trend now-on">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판</em>이 시간의 흐름에 따라 <br><em class="txt-highlight">변화되는
+                      과정</em>s을 확인할 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-hottest">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                    검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
+                      게시글</em>을 확인할 수 있습니다.
                   </li>
                 </ul>
               </div>
@@ -117,8 +119,8 @@
                   </div>
                   <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left swiper-button-next"></button>
-                    <button class="slide-btn slide-right swiper-button-prev"></button>
+                    <p class="slide-btn slide-left swiper-button-next"></p>
+                    <p class="slide-btn slide-right swiper-button-prev"></p>
                   </div>
                 </div>
 
@@ -177,8 +179,8 @@
                   </div>
                   <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left swiper-button-next"></button>
-                    <button class="slide-btn slide-right swiper-button-prev"></button>
+                    <p class="slide-btn slide-left swiper-button-next"></p>
+                    <p class="slide-btn slide-right swiper-button-prev"></p>
                   </div>
                 </div>
               </div>
@@ -231,8 +233,8 @@
                   </div>
                   <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left swiper-button-next"></button>
-                    <button class="slide-btn slide-right swiper-button-prev"></button>
+                    <p class="slide-btn slide-left swiper-button-next"></p>
+                    <p class="slide-btn slide-right swiper-button-prev"></p>
                   </div>
                 </div>
               </div>
@@ -1413,8 +1415,8 @@
                   </div>
                   <!-- <div class="swiper-pagination"></div> -->
                   <div class="slide-btn-wrap">
-                    <button class="slide-btn slide-left swiper-button-next"></button>
-                    <button class="slide-btn slide-right swiper-button-prev"></button>
+                    <p class="slide-btn slide-left swiper-button-next"></p>
+                    <p class="slide-btn slide-right swiper-button-prev"></p>
                   </div>
                 </div>
               </div>
