--- a/now.html
+++ b/now.html
@@ -36,11 +36,12 @@
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now now-on">
-                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판, 연관 단어</em>를 <br> 한눈에 알아볼 수 있습니다.
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판,</em> <em class="txt-highlight">연관 단어</em>를
+                    한눈에 알아볼 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-trend">
                     검색하신 키워드의 <em class="txt-highlight">관심도와 평판</em>이 시간의 흐름에 따라 <br><em class="txt-highlight">변화되는
-                      과정</em>s을 확인할 수 있습니다.
+                      과정</em>을 확인할 수 있습니다.
                   </li>
                   <li class="tab-info-item tab-hottest">
                     검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
